--- a/build.gradle
+++ b/build.gradle
@@ -19,15 +19,30 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok:1.18.28'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
 
-     implementation 'ch.qos.logback:logback-classic:1.4.14'
+    implementation 'ch.qos.logback:logback-classic:1.4.14'
 }
 
 test {
     useTestNG()
 }
 
-task qa(type:Test){
-    useTestNG(){
-        suites 'src/test/resources/testng.xml'
+task qa(type: Test) {
+    useTestNG() {
+        def suite = System.getProperty('suite', '')
+
+        if (suite.equals('quick')) {
+            suites 'src/test/resources/quick.xml'
+        } else if (suite.equals('login')) {
+            suites 'src/test/resources/login.xml'
+        } else {
+            suites 'src/test/resources/testng.xml'
+        }
+    }
+
+    if (project.hasProperty('browser')) {
+        systemProperty 'browser',
+
+                "${browser}"
+
     }
 }
