--- a/build.gradle
+++ b/build.gradle
@@ -45,4 +45,22 @@ task qa(type: Test) {
                 "${browser}"
 
     }
+
+    task scoupe(type:Test){
+        useTestNG(){
+            suites 'src/test/resources/scoupe.xml'
+        }
+    }
+
+
+    task team(type:Test){
+        useTestNG(){
+            def groups = System.getProperty('groups')
+            if (groups != null) {
+                includeGroups groups
+            }
+            suites 'src/test/resources/base.xml'
+        }
+    }
+
 }
